--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl" id="navBar">
                         <a href="index.html" class="navbar-brand">
-                            <h4 class="text-primary display-6 fw-bold mb-0">Mr<strong class="text-secondary">&</strong>Mrs</h4>
+                            <h4 class="text-primary display-6 fw-bold mb-0">MT<strong class="text-secondary">&</strong>HU</h4>
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
@@ -1068,11 +1068,14 @@
         </div>
         <!-- Copyright End -->
 
-
-
         <!-- Back to Top -->
         <a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>   
-
+          <!-- Nút phát/tắt âm thanh -->
+          <div class="music-btn" id="music-btn">
+            <span>🎵</span>
+          </div>
+            <!-- Âm thanh -->
+            <audio id="audio" src="music/PhiaSauMotCoGai-SoobinHoangSon-4632323.mp3"  preload="auto" autoplay></audio>
         
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
