--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="row g-4 align-items-center">
-                            <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="row g-4 justify-content-center align-items-center ">
+                            <!-- <div class="col-lg-5" data-aos="fade-up-right">
                                 <div class="d-flex">
                                     <div class="text-end my-auto pe-4">
                                         <h3 class="text-primary mb-3">Evelyn</h3>
@@ -170,13 +170,68 @@
                                     </div>
                                     <img src="img/bride.jpg" class="img-fluid img-border" alt="">
                                 </div>
+                            </div> -->
+                            <div class="col-md-4 col-lg-4 col-xl-3 team wow fadeInUp" data-wow-delay="0.8s">
+                                <div class="team-item">
+                                    <div class="team-img">
+                                        <div class="team-img-main">
+                                            <img src="img/Groomsmen-4.png" class="img-fluid w-100" alt="">
+                                        </div>
+                                        <div class="team-img-bg position-absolute" style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
+                                            <img src="img/team-1-bg.png" class="img-fluid" alt="">
+                                        </div>
+                                        <div class="team-img-bg position-absolute" style="bottom: -40px; right: -120px; transform: rotate(-30deg); z-index: 1;">
+                                            <img src="img/team-1-bg.png" class="img-fluid" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="team-content">
+                                        <div class="d-flex flex-column p-4">
+                                            <h5 class="text-white display-6 mb-1">David John</h5>
+                                            <h5 class="text-white fs-5 mb-0">Groomsmen</h5>
+                                        </div>
+                                    </div>
+                                    <div class="team-social d-flex flex-column">
+                                        <a class="btn btn-light btn-light-outline-0 mb-2" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-light btn-light-outline-0 mb-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-light btn-light-outline-0 mb-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-light btn-light-outline-0" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-lg-2 wow fadeIn" data-wow-delay="0.5s">
+                            
+                            <div class="col-lg-2" data-aos="zoom-in">
                                 <div class="d-flex align-items-center justify-content-center">
                                     <i class="fa fa-heart fa-5x text-primary"></i>
                                </div>
                             </div>
-                            <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="col-md-4 col-lg-4 col-xl-2 team wow fadeInUp" data-wow-delay="0.8s">
+                                <div class="team-item">
+                                    <div class="team-img">
+                                        <div class="team-img-main">
+                                            <img src="img/Groomsmen-4.png" class="img-fluid w-100" alt="">
+                                        </div>
+                                        <div class="team-img-bg position-absolute" style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
+                                            <img src="img/team-1-bg.png" class="img-fluid" alt="">
+                                        </div>
+                                        <div class="team-img-bg position-absolute" style="bottom: -40px; right: -120px; transform: rotate(-30deg); z-index: 1;">
+                                            <img src="img/team-1-bg.png" class="img-fluid" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="team-content">
+                                        <div class="d-flex flex-column p-4">
+                                            <h5 class="text-white display-6 mb-1">David John</h5>
+                                            <h5 class="text-white fs-5 mb-0">Groomsmen</h5>
+                                        </div>
+                                    </div>
+                                    <div class="team-social d-flex flex-column">
+                                        <a class="btn btn-light btn-light-outline-0 mb-2" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-light btn-light-outline-0 mb-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-light btn-light-outline-0 mb-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-light btn-light-outline-0" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="col-lg-5" data-aos="fade-up-left">
                                 <div class="d-flex">
                                     <img src="img/Groom.jpg" class="img-fluid img-border" alt="">
                                     <div class="my-auto ps-4">
@@ -185,7 +240,7 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -1075,7 +1130,7 @@
             <span>🎵</span>
           </div>
             <!-- Âm thanh -->
-            <audio id="audio" src="music/PhiaSauMotCoGai-SoobinHoangSon-4632323.mp3"  preload="auto" autoplay></audio>
+            <audio id="audio" src="music/PhiaSauMotCoGai-SoobinHoangSon-4632323.mp3" autoplay="true"></audio>
         
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
