--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                                     <img src="img/bride.jpg" class="img-fluid img-border" alt="">
                                 </div>
                             </div> -->
-                            <div class="col-md-4 col-lg-4 col-xl-3 team wow fadeInUp" data-wow-delay="0.8s">
+                            <div class="col-md-4 col-lg-4 col-xl-2 team wow fadeInUp" data-wow-delay="0.8s">
                                 <div class="team-item">
                                     <div class="team-img">
                                         <div class="team-img-main">
-                                            <img src="img/Groomsmen-4.png" class="img-fluid w-100" alt="">
+                                            <img src="img/MTHU/ANV_4580.JPG" class="img-fluid w-100" alt="">
                                         </div>
                                         <div class="team-img-bg position-absolute" style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
                                             <img src="img/team-1-bg.png" class="img-fluid" alt="">
@@ -208,7 +208,7 @@
                                 <div class="team-item">
                                     <div class="team-img">
                                         <div class="team-img-main">
-                                            <img src="img/Groomsmen-4.png" class="img-fluid w-100" alt="">
+                                            <img src="img/MTHU/ANV_4580.JPG" class="img-fluid w-100" alt="">
                                         </div>
                                         <div class="team-img-bg position-absolute" style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
                                             <img src="img/team-1-bg.png" class="img-fluid" alt="">
