--- a/index.html
+++ b/index.html
@@ -295,17 +295,17 @@
         </div> -->
         <!-- Wedding Date -->
         <!-- About Start -->
-        <div class="container-fluid position-relative overflow-hidden bg-secondary py-5">
+        <div class="container-fluid position-relative overflow-hidden bg-secondary py-5" >
             <img src="img/bg-flower.png" class="img-fluid position-absolute top-0" style="right: -15px; transform: rotate(270deg); opacity: 0.5;" alt="">
             <img src="img/bg-flower.png" class="img-fluid position-absolute" style="bottom: 10px; left: -15px; transform: rotate(90deg); opacity: 0.5;" alt="">
             <div class="container py-5 position-relative">
-                <div class="row g-5 align-items-center justify-content-center">
+                <div class="row">
                     <!-- <div class="col-xl-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="border-white bg-primary" style="border-style: double;">
                             <img src="img/about-1.jpg" class="img-fluid w-100" alt="">
                         </div>
                     </div> -->
-                    <div class="col-xl-6 invitation-section">
+                    <div class="col-xl-6 invitation-section" data-aos="zoom-in-up">
                         <div class="invitation-box left" style="height: 583px;">
                             <div class="left-vec"></div>
                             <div class="right-vec"></div>
@@ -445,7 +445,7 @@
 
 
                     </div>
-                    <div class="col-xl-6 invitation-section">
+                    <div class="col-xl-6 invitation-section" data-aos="zoom-in-up">
                         <!-- <div class="invitation-box left" style="height: 583px;">
                             <div class="left-vec"></div>
                             <div class="right-vec"></div>
